[package]
name = "carban"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["serde"] }
cursive = { version = "0.21.1", features = ["termion-backend"] }
home = "0.5.11"
log = { version = "0.4.22", features = ["serde", "std"] }
regex = "1.11.1"
rgb = { version = "0.8.50", features = ["serde"] }
rmp = "0.8.14"
rmp-serde = "1.3.0"
rusqlite = "0.32.1"
serde = { version = "1.0.216", features = ["derive", "alloc"] }
serde_bytes = "0.11.15"
simplelog = "0.12.2"
termion = { version = "4.0.3", features = ["serde"] }
toml = "0.8.19"
tui = { version = "0.19.0", features = ["termion", "serde"] }
